--- a/Tables/IE7/IE7_learning_regressions(2).tex
+++ b/Tables/IE7/IE7_learning_regressions(2).tex
@@ -17,9 +17,11 @@ gap\_from\_avg        &                     &                     &             
 Constant            &       1.893\sym{***}&       1.606\sym{***}&       1.375\sym{***}&       1.381\sym{***}&       1.387\sym{***}&       1.511\sym{***}&      -2.012\sym{***}\\
                     &     (0.010)         &     (0.022)         &     (0.082)         &     (0.045)         &     (0.046)         &     (0.121)         &     (0.028)         \\
 \hline
-Sample              & Not highest         & Not highest         & Not highest         &     Highest         &     Highest         &     Highest         &         All         \\
+Sample              & Not highest         & Not highest         & Not highest         &Highest only         &Highest only         &Highest only         &         All         \\
 Firm FE             &          No         &          No         &         Yes         &          No         &          No         &         Yes         &          No         \\
 Observations        &      14,133         &      14,133         &      14,133         &       2,046         &       2,046         &       2,046         &      16,164         \\
 \hline\hline
+\multicolumn{8}{l}{\footnotesize Average: is the difference between the mean of other firms' initial offers and own initial offer}\\
+\multicolumn{8}{l}{\footnotesize Max Gap: is the difference between the highest other firm's initial offer and own initial offer.}\\
 \end{tabular}
 }
