--- a/Ppt/251015_tea_v2.tex
+++ b/Ppt/251015_tea_v2.tex
@@ -335,7 +335,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 \end{frame}
 
 
-%%%%%%%%% Slide 15
+%%%%%%%%% Slide 16
 \begin{frame}{Learning(1)}\label{slide:fig4}    
 \scalebox{0.8}{
     \input{../Tables/IE7/IE7_learning_regressions.tex}
@@ -362,7 +362,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Model and Simulations}
 
-%%%%%%%%% Slide 17 %%%%%%%%%%%%% 
+%%%%%%%%% Slide 19 %%%%%%%%%%%%% 
 
 \begin{frame}{Learning Model: Overview}
 \begin{itemize}
@@ -454,6 +454,7 @@ $$\pi^{T2}_j(p^{T1}, c_j, c_{-j}) = \frac{1}{J}\left[\pi^{(j)}_j(p^{T1}, c_j) + 
 
 %%%%%
 
+ 
 \begin{frame}{First Stage: Strategic Pricing}
 \textbf{Firms anticipate the second stage when setting initial prices}
 
@@ -471,6 +472,21 @@ $$p^{T1}_j(c_j) = \arg\max_{p_j} \int \pi^{T1}_j(p_j, p^{T1}_{-j}(c_{-j}), c_j) 
 Trade-off: higher initial price (if accepted) vs. competitive position if search occurs
 
 \textcolor{red}{How to compute equilibrium?}
+\end{frame}
+
+\begin{frame}{Strategic considerations}
+Define $g(p_j, p_{-j}) =  D_j + (p_j - c_j) \frac{\partial D_j}{\partial p_j}$
+\begin{align}
+    \frac{\partial \pi_j^{T1}(p^{T1}, c_j, c_{-j})}{\partial p_j^{T1}} &= (1-\lambda) g(p_j^{T1}, p_{-j}^{T1})+ \frac{\lambda}{J}\left(
+    \underbrace{\frac{\partial p_j^{T2}}{\partial p_j^{T1} } g(p_j^{T2}, p_{-j}^{T1}) }_{\text{Option value}}
+    + \notag \\
+    & \sum_{j' \ne j} 
+    D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) + (p_j^{T1} - c_j)
+    \left[     \frac{\partial D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) }{\partial p_j^{T1}} +
+    \underbrace{\frac{\partial D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) }{\partial p_{ j'}^{T2} } 
+    \frac{\partial p_{ j'}^{T2}}{\partial p_j^{T1}}}_{\text{Strategic complementarity}}
+     \right]     \right)  \notag   
+\end{align}
 \end{frame}
 
 
