--- a/Ppt/251015_tea_v2.tex
+++ b/Ppt/251015_tea_v2.tex
@@ -298,13 +298,13 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 \end{frame}
 
 
-\begin{frame}{Algorithm precision} 
-    \begin{itemize}
-        \item If firms have different algorithms precision, e.g. the real type is $\theta_i$ and firm $j$ observes a signal $\hat{\theta}_{ij} \sim N(\theta_i, \sigma_j^2)$  
+%\begin{frame}{Algorithm precision} 
+%    \begin{itemize}
+%        \item If firms have different algorithms precision, e.g. the real type is $\theta_i$ and firm $j$ observes a signal $\hat{\theta}_{ij} \sim N(\theta_i, \sigma_j^2)$  
 
-        \item [Work on this slide ]
-    \end{itemize}
-\end{frame}
+%        \item [Work on this slide ]
+%    \end{itemize}
+%\end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
