--- a/Ppt/251015_tea_v2.tex
+++ b/Ppt/251015_tea_v2.tex
@@ -74,11 +74,12 @@
 \author{%
  Lucas Condeza
 \inst{1} \and
-   %\and
-%  Coauthor Three\inst{3}
+Diego Cussen
+\inst{2}
 }
 \institute{
   \inst{1} Yale University \\
+  \inst{2} New York University
 }
 
 \date{\today}
@@ -180,7 +181,8 @@
    
      $S$: stock of savings, $F$: per period annuity payment, $x_i$: buyer mortality factors
     
-    \item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
+    %\item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
+    \item Firm heterogeneity: algorithm (mortality tables) and financing costs ($r_j$)
     
     \end{itemize}
 
@@ -246,19 +248,20 @@ Particularities of the data/setting:
 
 \section{Empirical Evidence}
  
-%%%%%%%%% Slide 10
+%10 - Descriptive evidence 
 \begin{frame}{Descriptive Evidence}\label{slide:Descriptive_evidence}
 
 \begin{enumerate}
-    \item Most buyers request revised offers and the improvement is sizeable. \hyperlink{slide:fig1}{\beamerbutton{Revised offers}} 
-    \item Products are differentiated \hyperlink{slide:fig2}{\beamerbutton{Foregone value}} 
-    \item Selection into companies \hyperlink{slide:fig3}{\beamerbutton{Heterogeneity in algorithm precision}}
-    \item Firms learn about other firms' prices  \hyperlink{slide:fig4}{\beamerbutton{Learning}} 
+    \item Not all buyers request revised offers  $\rightarrow$ search costs \hyperlink{slide:fig1}{\beamerbutton{Revised offers}}
+    %\item Most buyers request revised offers and the improvement is substantial $\rightarrow$ search costs \hyperlink{slide:fig1}{\beamerbutton{Revised offers}} 
+    \item Buyers choose lower offers $\rightarrow$ product differentiation  \hyperlink{slide:fig2}{\beamerbutton{Foregone value}} 
+    \item Sorting into firms $\rightarrow$ algorithm precision?  \hyperlink{slide:fig3}{\beamerbutton{Sorting into firms}}
+    \item Patterns in revised offers $\rightarrow$ firm learning of initial offers.   \hyperlink{slide:fig4}{\beamerbutton{Learning}} 
 \end{enumerate}
 \end{frame}
 
-%%%%%%%%% Slide 11
-\begin{frame}\frametitle{Prevalence of revisions}\label{slide:fig1}
+%11 - Prevalence of revisions 
+\begin{frame}\frametitle{Revised offers: quantity and size}\label{slide:fig1}
 \begin{figure}
     \centering
     \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_dist_external_offers.png}
@@ -330,7 +333,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
         \item $$ 1(F_{ij}^R  - F_{ij}^I)  = \alpha_0 + \alpha_1 \text{Avg. gap}_{ij} + \alpha_2 \text{Max. gap}_{ij} + \epsilon_{ij}$$
     \end{itemize}
-    where  $$ \text{Avg. gap }_{ij} = \left(\frac{1}{J-1}\sum_{k \neq j} F_{ik}^I - F_{ij}^I\right) \quad \text{Max. gap } = \left(\max_{k \neq j} F_{ik}^I - F_{ij}^I\right)$$
+    where  $$ \text{Avg. gap }_{ij} = \frac{1}{F_{ij}^I}\left(\frac{1}{J-1}\sum_{k \neq j} F_{ik}^I - F_{ij}^I\right) \quad \text{Max. gap } = \frac{1}{F_{ij}^I}\left(\max_{k \neq j} F_{ik}^I - F_{ij}^I\right)$$
     
 \end{frame}
 
@@ -359,6 +362,8 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
 
 
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Model and Simulations}
 
@@ -369,17 +374,14 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
     \item \textbf{Goal:} Rationalize the increase in offers between initial and revised offers
     
     \item \textbf{Key mechanism:} Firms learn competitors' offers when consumer requests revised offers
-    
-
 
     \item \textbf{Incorporate:}
     \begin{itemize}
         \item Search cost [not today]
         \item Product Differentiation [today]
-        \item Prediction precision [not today]
+        \item Sorting into firms [not today]
         \item Learning [today]
     \end{itemize}
-
 \end{itemize}
 \end{frame}
 
