Updates from Overleaf

--- a/Ppt/251015_tea_v2.tex
+++ b/Ppt/251015_tea_v2.tex
@@ -264,7 +264,7 @@ Particularities of the data/setting:
 \begin{frame}\frametitle{Revised offers: quantity and size}\label{slide:fig1}
 \begin{figure}
     \centering
-    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_dist_external_offers.png}
+    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_dist_external_offers(1).png}
     \hfill 
     \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_offer_improvement_histogram.png}
 \end{figure}
